Fixed previous change to text box’s, now only effects dropdown box in shift edit and not the menu dropdown toggle in top right corner.

--- a/client/stylesheets/inspinia/custom/_editShiftModal.scss
+++ b/client/stylesheets/inspinia/custom/_editShiftModal.scss
@@ -16,6 +16,13 @@
 			}
 		}
 
+		li > a {
+			word-wrap: break-word;      /* IE*/
+			white-space: -moz-pre-wrap; /* Firefox */
+			white-space: pre-wrap;
+
+		}
+
 		div.hr-line-dashed {
 			border-top-color: #ccc;
 			background-color: transparent;
