--- a/client/stylesheets/inspinia/framework/_navigation.scss
+++ b/client/stylesheets/inspinia/framework/_navigation.scss
@@ -82,9 +82,6 @@
 	margin       : 4px;
 	text-align   : left;
 	font-weight  : normal;
-	word-wrap: break-word;      /* IE*/
-	white-space: -moz-pre-wrap; /* Firefox */
-	white-space: pre-wrap;
 }
 
 .dropdown-menu > .active > a,
